--- a/index.html
+++ b/index.html
@@ -6,6 +6,10 @@
     <title>Para Mi Florcita 💖</title>
     <style>
         body {
+            <audio autoplay loop>
+    <source src="nombre-de-tu-archivo.mp3" type="audio/mpeg">
+</audio>
+
             font-family: 'Arial', sans-serif;
             background-color: #ffe6f2;
             text-align: center;
