--- a/index.html
+++ b/index.html
@@ -5,11 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Para Mi Florcita 💖</title>
     <style>
-        body {
-            <audio autoplay loop>
+        body {<audio autoplay loop>
     <source src="Gorillaz - To Binge - Plastic Beach.mp3" type="audio/mpeg">
 </audio>
-
             font-family: 'Arial', sans-serif;
             background-color: #ffe6f2;
             text-align: center;
