--- a/index.html
+++ b/index.html
@@ -36,8 +36,8 @@
 </head>
 <body>
     <h1>Para Mi Florcita 💖</h1>
-    <p>Hacé clic en el botón para ver mi mensaje especial para vos.</p>
-    <button id="boton">Ver mensaje</button>
+    <p>Hacé clic en esta, jajaja, te amo, mira lo que hice mi princesa.</p>
+    <button id="boton">Leeme Piba</button>
     <p id="mensaje">Te amo mucho, Flor. Se que no es mucho lo que te hago para vos pero esto me esta llevando tiempo jajaja, quiero que sepas que este mensaje y esta carta digital va hecha con mucho amor, estoy viendo un tutorial muy largo para hacerlo encima, no puedo expresar capaz con palabras o acciones lo que siento por vos a veces pero te juro que lo que siento quiere explotar, y sinceramente estas logrando que me vuelva a enamorar de vos, no estaba al 100 estos ultimos meses por todoslos problemas que tuvimos que pasar juntos, pero igual te amo mucho, gracias por nunca dejarme de lado, por siempre defenderme cuando diecn algo malo de mi, por siempre estar para mi cuando mas te necesite, gracias pr cambiarme para bien, gracias por existir. Siempre voy a estar para vos mi pochoclo dulce. 💕</p>
 
     <script>
