--- a/index.html
+++ b/index.html
@@ -4,46 +4,41 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Para Mi Florcita 💖</title>
-    <style>
-        body {
-            <audio autoplay loop>
-    <source src="To-Binge.mp3" type="audio/mpeg">
-</audio>
-            font-family: 'Arial', sans-serif;
-            background-color: #ffe6f2;
-            text-align: center;
-            padding: 50px;
-        }
-        #mensaje {
-            font-size: 24px;
-            color: #d63384;
-            opacity: 0;
-            transition: opacity 2s;
-        }
-        #boton {
-            background-color: #ff66b2;
-            color: white;
-            border: none;
-            padding: 10px 20px;
-            font-size: 18px;
-            cursor: pointer;
-            border-radius: 10px;
-        }
-        #boton:hover {
-            background-color: #ff3385;
-        }
-    </style>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>Para Mi Florcita 💖</h1>
-    <p>Hacé clic en esta, jajaja, te amo, mira lo que hice mi princesa.</p>
-    <button id="boton">Leeme Piba</button>
-    <p id="mensaje">Te amo mucho, Flor. Se que no es mucho lo que te hago para vos pero esto me esta llevando tiempo jajaja, quiero que sepas que este mensaje y esta carta digital va hecha con mucho amor, estoy viendo un tutorial muy largo para hacerlo encima, no puedo expresar capaz con palabras o acciones lo que siento por vos a veces pero te juro que lo que siento quiere explotar, y sinceramente estas logrando que me vuelva a enamorar de vos, no estaba al 100 estos ultimos meses por todoslos problemas que tuvimos que pasar juntos, pero igual te amo mucho, gracias por nunca dejarme de lado, por siempre defenderme cuando diecn algo malo de mi, por siempre estar para mi cuando mas te necesite, gracias pr cambiarme para bien, gracias por existir. Siempre voy a estar para vos mi pochoclo dulce. 💕</p>
+
+    <!-- 🎶 Música de fondo -->
+    <audio autoplay loop>
+        <source src="TU-CANCION.mp3" type="audio/mpeg">
+    </audio>
+
+    <!-- 💌 Contenido de la carta -->
+    <div class="carta">
+        <h1>Para vos, mi amor 💕</h1>
+        <p id="mensaje"></p>
+        <button id="boton" onclick="mostrarAmor()">💖 Tocá acá 💖</button>
+    </div>
 
     <script>
-        document.getElementById("boton").addEventListener("click", function() {
-            document.getElementById("mensaje").style.opacity = "1";
-        });
+        // ✍️ Efecto máquina de escribir
+        let texto = "Te amo mucho, Flor. Se que no es mucho lo que te hago para vos pero esto me esta llevando tiempo jajaja, quiero que sepas que este mensaje y esta carta digital va hecha con mucho amor, estoy viendo un tutorial muy largo para hacerlo encima, no puedo expresar capaz con palabras o acciones lo que siento por vos a veces pero te juro que lo que siento quiere explotar, y sinceramente estas logrando que me vuelva a enamorar de vos, no estaba al 100 estos ultimos meses por todoslos problemas que tuvimos que pasar juntos, pero igual te amo mucho, gracias por nunca dejarme de lado, por siempre defenderme cuando diecn algo malo de mi, por siempre estar para mi cuando mas te necesite, gracias pr cambiarme para bien, gracias por existir. Siempre voy a estar para vos mi pochoclo dulce. 💕";
+        let i = 0;
+        
+        function escribir() {
+            if (i < texto.length) {
+                document.getElementById("mensaje").innerHTML += texto.charAt(i);
+                i++;
+                setTimeout(escribir, 100);
+            }
+        }
+        window.onload = escribir;
+
+        // 🎇 Efecto al tocar el botón
+        function mostrarAmor() {
+            alert("¡Sos lo mejor que me pasó en la vida, mi Florcita! 💖💫");
+        }
     </script>
+
 </body>
 </html>
