--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <!-- 💌 Contenido de la carta -->
     <div class="carta">
         <h1>Para vos, mi amor 💕</h1>
-        <p id="mensaje"></p>
+        <p id="mensaje">&nbsp;</p>
         <button id="boton" onclick="mostrarAmor()">💖 Tocá acá 💖</button>
     </div>
 
