--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
 <body>
 
     <!-- 🎶 Música de fondo -->
-    <audio autoplay loop>
-        <source src="To-Binge.mp3" type="audio/mpeg">
-    </audio>
+    <audio id="musica" loop>
+    <source src="To-Binge.mp3" type="audio/mpeg">
+</audio>
 
     <!-- 💌 Contenido de la carta -->
     <div class="carta">
